--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,7 +22,7 @@
           <a class="nav-link" aria-current="page" href="/">Главная</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Ссылка</a>
+          <a class="nav-link" href="/categories_list/">Категории</a>
         </li>
       </ul>
       <form>
