--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,8 +25,8 @@
           <a class="nav-link" href="/categories_list/">Категории</a>
         </li>
       </ul>
-      <form>
-        <input class="form-control" type="text" placeholder="Поиск" aria-label="Search">
+      <form action="/search/">
+        <input name="search" class="form-control" type="text" placeholder="Поиск" aria-label="Search">
       </form>
     </div>
   </div>
